update for test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     Welcome to {{title}}!!
   </h1>
 </div>
-
+<!--
 <div *ngIf=" !user.isLogged ">
   <button (click)="onClickLoginWithGoogle()">Google Login</button>
   <button (click)="onClickLoginWithFacebook()">Facebook Login</button>
@@ -12,10 +12,10 @@
 <div *ngIf=" user.isLogged ">
   You are logged in as <b>{{ user.auth.currentUser.displayName }}</b>
   <button (click)=" user.logout() ">Loggout</button>
-</div>
+</div>-->
 
 
-<div>Am I admin? {{ user.isAdmin }}</div>
+<!--<div>Am I admin? {{ user.isAdmin }}</div>-->
 
 
 <hr>
