--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
 <div>Am I admin? {{ user.isAdmin }}</div>
 
 
+
 <hr>
 <h2>Forum Category</h2>
 <div style="color: darkred;">{{ category_error }}</div>
@@ -31,7 +32,7 @@ Create a forum category:
 <input name="category_name" [(ngModel)]="category_name" placeholder="Category Name">
 <button type="button" (click)="onClickCreateCategory()">Submit</button>
 
-<div *ngIf=" categories.length ">
+<div *ngIf=" categories && categories.length ">
   <table>
     <tr>
       <th>ID</th>
@@ -49,6 +50,8 @@ Create a forum category:
     </tr>
   </table>
 </div>
+
+
 
 <hr>
 <h2>Forum Posts</h2>
